--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -151,14 +151,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ca610842",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n",
+      "[36, 64, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [2, 4, 6, 8, 10]\n",
     "\n",
-    "# TODO: Write your solution below.\n"
+    "# TODO: Write your solution below.\n",
+    "\n",
+    "#Squared numbers\n",
+    "d = lambda x: x*x\n",
+    "\n",
+    "numbers = map(d, numbers)\n",
+    "numbers = list(numbers)\n",
+    "print(numbers)\n",
+    "\n",
+    "#Filter greater than 20\n",
+    "e = lambda x: x>20\n",
+    "\n",
+    "numbers = filter(e, numbers)\n",
+    "numbers = list(numbers)\n",
+    "print(numbers)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -189,10 +214,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d05edb5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "36\n",
+      "dict_keys(['name', 'age'])\n",
+      "dict_values(['John', 36])\n",
+      "Bob\n",
+      "52\n",
+      "{'name': 'Bob', 'age': 52, 42: 'The Answer'}\n",
+      "{'name': 'Bob', 42: 'The Answer'}\n",
+      "{}\n",
+      "{'name': 'Bob', 42: 'The Answer'}\n"
+     ]
+    }
+   ],
    "source": [
     "d = dict(name = \"John\", age = 36)\n",
     "## Access\n",
@@ -226,10 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "1ebb65b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Emil Mustermann!\n",
+      "Hi Lara Schmidt!\n",
+      "Hi Linus Musk!\n"
+     ]
+    }
+   ],
    "source": [
     "def greetPerson(name, last_name):\n",
     "  print(f\"Hi {name} {last_name}!\")\n",
@@ -273,20 +325,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "adaa0d0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO:  Write your solution below."
+    "## TODO:  Write your solution below.\n",
+    "student_grades = {}\n",
+    "\n",
+    "def add_grade(student, grade):\n",
+    "    if student in student_grades:\n",
+    "        student_grades[student].append(grade)\n",
+    "    else:\n",
+    "        student_grades[student] = [grade]\n",
+    "    return student_grades\n",
+    "\n",
+    "\n",
+    "def calculate_average(student):\n",
+    "    grades = 0\n",
+    "    amount = 0\n",
+    "    if student in student_grades:\n",
+    "        return sum(student_grades[student])/len(student_grades[student])\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "def highest_average():\n",
+    "    if(student_grades):\n",
+    "        max_grade = max(student_grades.values())\n",
+    "        return list(filter(lambda key: student_grades[key] == max_grade, student_grades))\n",
+    "\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "a45ff33d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': [85, 90], 'Bob': [78, 82], 'Charlie': [95]}\n",
+      "87.5\n",
+      "80.0\n",
+      "['Charlie']\n"
+     ]
+    }
+   ],
    "source": [
     "# Test cases\n",
     "student_grades = {}\n",
@@ -296,6 +384,8 @@
     "add_grade(\"Bob\", 78)\n",
     "add_grade(\"Bob\", 82)\n",
     "add_grade(\"Charlie\", 95)\n",
+    "\n",
+    "print(student_grades)\n",
     "\n",
     "print(calculate_average(\"Alice\"))  # Expected output: 87.5\n",
     "print(calculate_average(\"Bob\"))    # Expected output: 80.0\n",
@@ -333,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "id": "6f21f19f",
    "metadata": {},
    "outputs": [
@@ -344,7 +434,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Generate a random number between 0 and 4\u001b[39;00m\n\u001b[1;32m      4\u001b[0m x \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m)\n",
+      "Cell \u001b[0;32mIn[66], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Generate a random number between 0 and 4\u001b[39;00m\n\u001b[1;32m      4\u001b[0m x \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m)\n",
       "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
@@ -373,22 +463,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ac9213e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Write your solution for Fix 1 below."
+    "# TODO: Write your solution for Fix 1 below.\n",
+    "\n",
+    "x = random.randint(0, 2) \n",
+    "if x == 0:\n",
+    "    raise Exception(\"We cannot divide by zero!\")\n",
+    "else:\n",
+    "    print(0 / x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "id": "ebcdc482",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Write your solution for Fix 2 below."
+    "# TODO: Write your solution for Fix 2 below.\n",
+    "\n",
+    "x = random.randint(0, 2) \n",
+    "\n",
+    "assert(x != 0)\n",
+    "print(0 / x)"
    ]
   },
   {
@@ -457,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 113,
    "id": "c563c993",
    "metadata": {},
    "outputs": [
@@ -465,15 +582,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "0 / 0 is not well-defined!\n"
      ]
     }
    ],
    "source": [
     "# Hint \n",
     "# To read an input, you can use the following code:\n",
-    "x = input(\"Enter the numerator: \")\n",
-    "print(x)"
+    "try: \n",
+    "    x = int(input(\"Enter the numerator: \"))\n",
+    "    y = int(input(\"Enter the denumerator: \"))\n",
+    "    result = x / y\n",
+    "except ValueError:\n",
+    "    print(\"The input is not a valid number\")\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"0 / 0 is not well-defined!\")\n",
+    "else: \n",
+    "    print(result)\n",
+    "    print(\"successfully computed!\")"
    ]
   },
   {
@@ -511,12 +637,41 @@
    "execution_count": null,
    "id": "9b27b0b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input is not a valid number\n"
+     ]
+    }
+   ],
    "source": [
     "# Hint 1\n",
-    "guess = input(\"Take a guess: \")\n",
-    "print(guess)\n",
-    "print(type(guess))"
+    "#guess = input(\"Take a guess: \")\n",
+    "#print(guess)\n",
+    "#print(type(guess))\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    value = random.randint(1, 100)\n",
+    "    guess = (input(\"Take a guess: \"))\n",
+    "    while True:\n",
+    "        if (guess == \"quit\"):\n",
+    "            print(\"Thanks for playing\")\n",
+    "            break\n",
+    "        guess = int(guess)\n",
+    "        if(guess >> value):\n",
+    "            print(\"Value too big\")\n",
+    "        if(guess <<  value):\n",
+    "            print(\"Value too small\")\n",
+    "        guess = input(\"Try again: \")\n",
+    "except ValueError:\n",
+    "        print(\"The input is not a valid number\")\n",
+    "finally:\n",
+    "     if (guess == value):\n",
+    "        print(\"You win\")\n",
+    "        exit()\n"
    ]
   },
   {
@@ -1103,7 +1258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "advanced-python",
+   "display_name": "mlenv",
    "language": "python",
    "name": "python3"
   },
@@ -1117,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
